--- a/.github/workflows/build-dol.yml
+++ b/.github/workflows/build-dol.yml
@@ -8,17 +8,30 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
+      # 1. 先檢出你的 repo
       - uses: actions/checkout@v3
 
-      - name: Install devkitPPC
-        run: sudo apt-get install -y devkitpro-devkitPPC
+      # 2. 安裝 devkitPro (官方推薦方式)
+      - name: Install devkitPro
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y wget git unzip
+          wget https://apt.devkitpro.org/devkitpro-keyring_2022_all.deb
+          sudo dpkg -i devkitpro-keyring_2022_all.deb
+          sudo apt-get update
+          sudo apt-get install -y devkitpro-pacman
+          sudo dkp-pacman -Syu --noconfirm
+          sudo dkp-pacman -S --noconfirm devkitPPC libogc libfat libnds
 
+      # 3. 編譯 .dol
       - name: Build DOL
         run: make
 
+      # 4. 上傳 artifact (新版 v4)
       - name: Upload artifact
-        uses: actions/upload-artifact@v4   # 改成 v4
+        uses: actions/upload-artifact@v4
         with:
           name: GameCubeClient
           path: GameCubeClient.dol
