--- a/.github/workflows/build-dol.yml
+++ b/.github/workflows/build-dol.yml
@@ -10,12 +10,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - name: Install devkitPPC
         run: sudo apt-get update && sudo apt-get install -y devkitpro-devkitPPC
+
       - name: Build DOL
         run: make
+
       - name: Upload artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4  # 改成 v4
         with:
           name: GameCubeClient
           path: GameCubeClient.dol
